--- a/workflow-with-disang-rewrite.ipynb
+++ b/workflow-with-disang-rewrite.ipynb
@@ -9158,6 +9158,294 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 542,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-21T23:00:13.270281Z",
+     "start_time": "2018-02-21T23:00:13.233399Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from utils import rewrite_amber_input_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 543,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-21T23:00:34.953154Z",
+     "start_time": "2018-02-21T23:00:34.929074Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"':1-3\", '|', ':10@C4', '|', \":10@N1',\"] → ':143-145 | :6@C4 | :6@N1,'\n"
+     ]
+    }
+   ],
+   "source": [
+    "rewrite_amber_input_file('generated/a-bam-p/mini.in', 'generated/a-bam-p/mini.in', mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-21T04:38:21.799556Z",
+     "start_time": "2018-02-21T04:38:21.775727Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def split(delimiters, string, maxsplit=0):\n",
+    "    import re\n",
+    "    regexPattern = '|'.join(map(re.escape, delimiters))\n",
+    "    return re.split(regexPattern, string, maxsplit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 450,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-21T22:09:22.999874Z",
+     "start_time": "2018-02-21T22:09:22.975907Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"':1-3\", '|', ':10@C4', '|', \":10@N1',\"]\n",
+      "{0: '1-3', 1: '|', 2: '10@C4', 3: '|', 4: '10@N1'}\n",
+      "Working on...1\n",
+      "Working on...3\n",
+      "[143, 145]\n",
+      "|\n",
+      "Working on...10@C4\n",
+      "[6]\n",
+      "|\n",
+      "Working on...10@N1\n",
+      "[6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rewrite_amber_input_file('generated/a-bam-p/mini.in', 'tmp.in', mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 546,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-21T23:33:36.937547Z",
+     "start_time": "2018-02-21T23:33:36.913313Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "144"
+      ]
+     },
+     "execution_count": 546,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mapping[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## THe mapping is wrong!Arrggghhhhhhhhhhhhhhhhhhhhhhhh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 540,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-21T22:59:10.405846Z",
+     "start_time": "2018-02-21T22:59:10.258825Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def rewrite_amber_input_file(input_file, output_file, mapping):\n",
+    "    # First, read the existing file...\n",
+    "    with open(input_file, 'r') as file:\n",
+    "        lines = []\n",
+    "        for line in file:\n",
+    "            lines.append(line)\n",
+    "    \n",
+    "    # Next, rewrite using the fact that Niel has a fixed width for the atom index section...\n",
+    "    with open(output_file, 'w') as file:\n",
+    "        for line_number, line in enumerate(lines):\n",
+    "            \n",
+    "            if 'restraintmask' in line:\n",
+    "                restraint_mask = line.split()[2:]\n",
+    "                restraint_mask_line = line_number\n",
+    "            else:\n",
+    "                pass\n",
+    "    \n",
+    "        new_masks = []\n",
+    "        for mask in restraint_mask:\n",
+    "            if ':' in mask:\n",
+    "                if \"'\" in mask:\n",
+    "                    mask = mask.replace(\"'\", \"\")\n",
+    "                if \",\" in mask:\n",
+    "                    mask = mask.replace(\",\", \"\")\n",
+    "                # Now we have masks joined by '|'                \n",
+    "                # Split into residues...\n",
+    "                if '-' in mask[1:]:\n",
+    "                    residues = split('-', mask[1:])\n",
+    "                    new_residues = []\n",
+    "                    for residue in residues:\n",
+    "                        new_residue = mapping[int(residue) - 1]\n",
+    "                        new_residues.append(str(new_residue))\n",
+    "                else:\n",
+    "                    residues = split('@', mask[1:])\n",
+    "                    new_residues = []\n",
+    "                    for residue in residues[:1]:\n",
+    "                        new_residue = mapping[int(residue) - 1]\n",
+    "                        new_residues.append(str(new_residue))\n",
+    "                if len(new_residues) > 1:\n",
+    "                    new_mask = ':' + '-'.join(new_residues)\n",
+    "                else:\n",
+    "                    new_mask = ':' + new_residues[0] + '@' + residues[1:][0]\n",
+    "                new_masks.append(new_mask)\n",
+    "            \n",
+    "        new_restraint_mask = '\\'' + ' | '.join(new_masks) + ',' + '\\''\n",
+    "        print(f'{restraint_mask} → {new_restraint_mask}')\n",
+    "        \n",
+    "        lines[restraint_mask_line] = '  restraintmask = ' + new_restraint_mask + '\\n'\n",
+    "        for line in lines:\n",
+    "            file.write(line)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 541,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-21T22:59:10.658327Z",
+     "start_time": "2018-02-21T22:59:10.631419Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"':1-3\", '|', ':10@C4', '|', \":10@N1',\"] → ':143-145 | :6@C4 | :6@N1,'\n"
+     ]
+    }
+   ],
+   "source": [
+    "rewrite_amber_input_file('generated/a-bam-p/mini.in', 'tmp.in', mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 469,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-21T22:45:54.562646Z",
+     "start_time": "2018-02-21T22:45:54.529956Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'dict' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-469-17d3a300d534>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmapping\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'dict' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "mapping(int(1) - 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 548,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-22T01:02:11.470789Z",
+     "start_time": "2018-02-22T01:02:11.446412Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "143"
+      ]
+     },
+     "execution_count": 548,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mapping[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
