--- a/notebooks/archived/mobley_testing.ipynb
+++ b/notebooks/archived/mobley_testing.ipynb
@@ -162,9 +162,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:workshop_test]",
+   "display_name": "Python [conda env:smirnoff-host-guest]",
    "language": "python",
-   "name": "conda-env-workshop_test-py"
+   "name": "conda-env-smirnoff-host-guest-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -176,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   },
   "toc": {
    "nav_menu": {},
