Adds functional conversion of a benchmarkset host-guest; needs additional documentation

--- a/02-convert-benchmarkset.ipynb
+++ b/02-convert-benchmarkset.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's specify the input data."
+    "First, let's specify the directory of "
    ]
   },
   {
@@ -113,6 +113,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Before we get started, let's grab the box vectors from the files -- this will come in handy later, because we lose this information when we merge the structures down below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reference = pmd.load_file(destination + 'cb7-1.prmtop', xyz=destination + 'cb7-1.rst7')\n",
+    "box = reference.box"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Next, we'll create a proper PDB from these AMBER files, and delete the `CONECT` records that are solvent-solvent."
    ]
   },
@@ -125,6 +142,13 @@
     "create_pdb_with_conect(solvated_pdb=destination + 'cb7-1.rst7',\n",
     "                      amber_prmtop=destination + 'cb7-1.prmtop',\n",
     "                      output_pdb=destination + 'cb7-1.pdb')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to prune the `CONECT` records to deal with https://github.com/openforcefield/openforcefield/issues/68."
    ]
   },
   {
@@ -336,6 +360,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged.box = reference.box"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 90,
    "metadata": {},
    "outputs": [
@@ -365,16 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we should be done!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged.box"
+    "Finally, we can copy box information from the initial files and write the merged structure"
    ]
   },
   {
